adicionado css separado

--- a/desafio-3/index.html
+++ b/desafio-3/index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 3</title>
 
-    <style>
-        p{
-            margin: 40px;
-            padding: 20px;
-        }
-        
-        .estilo-1 {
-            background-color: #F5F5F5;
-        }
-
-        .estilo-2 {
-            background-color: #F0CCE2;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Desafio 3</h1>
 
@@ -28,7 +17,9 @@
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, laudantium temporibus, aliquid quod quos aut expedita rem accusantium possimus, numquam mollitia. Praesentium earum eveniet aliquam in labore accusantium, quas quod.
     </p>
 
-    <p class="estilo-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis inventore, quaerat molestiae eum similique nostrum nobis. Consectetur aspernatur, ad iste laboriosam in, eum rem voluptatibus consequuntur, ullam recusandae eius!
+    <p class="estilo-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis inventore, quaerat molestiae eum similique nostrum nobis. Consectetur aspernatur, ad iste laboriosam in, eum rem voluptatibus
+    consequuntur, ullam recusandae eius!
     </p>
 </body>
+
 </html>
