adicionado css externo

--- a/desafio-4/index.html
+++ b/desafio-4/index.html
@@ -7,29 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 4</title>
 
-    <style>
-        h2 {
-            margin: 5px;
-        }
+    <link rel="stylesheet" href="style.css">
 
-        th, td {
-            color: white;
-            padding: 5px;
-            text-align: center;
-        }
-
-        .cabecalho-moda {
-            background-color: #bb86fc;
-        }
-
-        .cabecalho-casa {
-            background-color: #00C4B4;
-        }
-
-        .valores-tabela {
-            background-color: #424250;
-        }
-    </style>
 </head>
 
 <body>
