--- a/desafio-2/index.html
+++ b/desafio-2/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 2</title>
 </head>
+
 <body>
     <h1>Desafio 2</h1>
 
-    <img src="http://placekitten.com/200/300" alt="imagem gatinho" title="imagem gatinho fofo"> <br>
-
-    <a href="https://google.com" target="_blank">Clique aqui para ir ao Google</a>
+    <a href="https://google.com" target="_blank">
+        <img src="http://placekitten.com/200/300" alt="imagem gatinho" title="imagem gatinho fofo">
+    </a>
 </body>
+
 </html>
