troca tah <span> pela <strong>

--- a/desafio-1/index.html
+++ b/desafio-1/index.html
@@ -12,13 +12,13 @@
 <body>
     <h1>Lista de alimentos:</h1>
 
-    <ul>
-        <li>Arroz integral 1kg - <span class="preco">R$ 7,00</span></li>
-        <li>Feijão preto 1kg - <span class="preco">R$ 9,00</span></li>
-        <li>Banana prata 1kg - <span class="preco">R$ 8,00</span></li>
-        <li>Leite integral 1L - <span class="preco">R$ 3,50</span></li>
+    <ul class="produtos-precos">
+        <li>Arroz integral 1kg - <strong>R$ 7,00</strong></li>
+        <li>Feijão preto 1kg - <strong>R$ 9,00</strong></li>
+        <li>Banana prata 1kg - <strong>R$ 8,00</strong></li>
+        <li>Leite integral 1L - <strong>R$ 3,50</strong></li>
     </ul>
 
-    <p>Total - <span class="preco">R$ 27,50</span></p>
+    <p class="produtos-precos">Total - <strong>R$ 27,50</strong></p>
 </body>
 </html>
