troca do nome das classes

--- a/desafio-3/index.html
+++ b/desafio-3/index.html
@@ -13,11 +13,11 @@
 <body>
     <h1>Desafio 3</h1>
 
-    <p class="estilo-1">
+    <p class="paragrafo-normal">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi, laudantium temporibus, aliquid quod quos aut expedita rem accusantium possimus, numquam mollitia. Praesentium earum eveniet aliquam in labore accusantium, quas quod.
     </p>
 
-    <p class="estilo-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis inventore, quaerat molestiae eum similique nostrum nobis. Consectetur aspernatur, ad iste laboriosam in, eum rem voluptatibus
+    <p class="paragrafo-destacado"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum omnis inventore, quaerat molestiae eum similique nostrum nobis. Consectetur aspernatur, ad iste laboriosam in, eum rem voluptatibus
     consequuntur, ullam recusandae eius!
     </p>
 </body>
