--- a/desafio-4/index.html
+++ b/desafio-4/index.html
@@ -16,41 +16,38 @@
 
     <h2>Moda</h2>
 
-    <table style="width:40%">
+    <table>
         <tr class="cabecalho-moda">
             <th>Produto</th>
             <th>Tamanho</th>
             <th>Valor</th>
         </tr>
-        <tr class="valores-tabela">
+        <tr>
             <td>Camiseta</td>
             <td>M</td>
             <td>R$ 49,00</td>
         </tr>
-        <tr class="valores-tabela">
+        <tr>
             <td>Tênis</td>
-            <td>37</td>
-            <td>R$ 250,00</td>
+            <td>42</td>
+            <td>R$ 5,00</td>
         </tr>
     </table>
 
     <h2>Casa</h2>
 
-    <table style="width:40%">
+    <table>
         <tr class="cabecalho-casa">
             <th>Produto</th>
-            <th>Marca</th>
             <th>Valor</th>
         </tr>
-        <tr class="valores-tabela">
+        <tr>
             <td>Sofá</td>
-            <td>Mobly</td>
-            <td>R$ 4.000,00</td>
+            <td>R$ 1.200,00</td>
         </tr>
-        <tr class="valores-tabela">
+        <tr>
             <td>Televisão</td>
-            <td>LG</td>
-            <td>R$ 2.500,00</td>
+            <td>R$ 5.000,00</td>
         </tr>
     </table>
 </body>
